# SuccinctBitvector

./: CMakeLists.txt  README.md
bench/: bench_succinct_bitvector.cpp
examples/: bvtool.cpp
include/: succinct_bitvector.hpp
src/: succinct_bitvector.cpp
test/: test_succinct_bitvector.cpp
